--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ kramdown:
   input: GFM
   hard_wrap: false
 highlighter: rouge
-permalink: /:title/
+permalink: LIS-570-Au2020/:title/
 future: true
 # safe: true # breaks local rendering if enabled
 timezone: America/New_York
