--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: 'LIS-570-Research-Assesment-And-Design'
-baseurl: https://nniiicc.github.io/LIS-570-Au2020/
+baseurl: /LIS-570-Au2020
 
 # Settings
 markdown: kramdown
